# zoroswap

./: .env-example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  config-example.toml  faucets-example.toml  private_test_store.sqlite3  public_test_store.sqlite3  run-local-setup.sh  run.sh
.github/workflows/: ci.yml
crates/zoro/: Cargo.toml
crates/zoro/masm/accounts/: two_asset_pool.masm
crates/zoro/masm/notes/: ZOROSWAP.masm
crates/zoro/masm/scripts/: set_pool0_state.masm  set_pool1_state.masm
crates/zoro/src/: amm_state.rs  common.rs  config.rs  faucet.rs  lib.rs  main.rs  note_serialization.rs  notes_listener.rs  oracle_sse.rs  order.rs  pool.rs  server.rs  trading_engine.rs
crates/zoro/tests/: e2e_private_note_test.rs  e2e_public_note_test.rs  e2e_zoroswap_note_test.rs
crates/zoro_curve_base/: Cargo.toml
crates/zoro_curve_base/src/: lib.rs  traits.rs
crates/zoro_miden/: Cargo.toml
crates/zoro_miden/keystore/: 1050329122089542639  1131649979087981308  1223484478050425916  1261217255335519041  1383268952364611549  1433809630843870865  155589559650237484  1572044606538033320  1797993995796904956  2098051796802105192  2109002938911655258  2536576822923315871  2759459555197132687  2838565677430692052  3387796340551508331  3474887997319346335  353215286700270038  3568002000974060245  4110341267653554961  4295017980733351041  4319385575108894397  4367537068428025260  4466736842484915562  4557516250578651680  4644157567161131194  4817216699560174700  4834804410713803306  4842559303974935164  4993770711982576795  5127312244639021492  5133223470509318074  5149142865524698220  5350088604186885977  5508457140670547263  5694499971009363287  5696088131248107143  5961469259247479893  596965972573278976  6017443174272129473  6052454784758387942  (+27 more)
crates/zoro_miden/masm/accounts/: zoropool.masm
crates/zoro_miden/masm/lib/: asset_utils.masm  math.masm  output_note_utils.masm  storage_utils.masm
crates/zoro_miden/masm/notes/: DEPOSIT.masm  POSITION.masm  TRADER_DEPOSIT.masm  WITHDRAW.masm  ZOROSWAP.masm
crates/zoro_miden/masm/notes/lib/: common.masm  reclaim.masm  respawn.masm
crates/zoro_miden/masm/scripts/: mint.masm  set_pool1_state.masm
crates/zoro_miden/src/: account.rs  assembly_utils.rs  asset_utils.rs  client.rs  curve.rs  faucet.rs  lib.rs  note.rs  note_roots.rs  pool.rs  pool_execution.rs  pool_state.rs  price.rs  test_utils.rs
crates/zoro_miden/testing_stores/: account_b33e417f-acad-4c3b-b16a-8358a481a9f1  faucet_012a00c0-5be6-4b87-8c9f-eb18aac35991  faucet_d1e37c6a-b592-4694-855c-fce19545fa00  pool_b8115919-87fa-4ff7-9e48-b837624ac063
crates/zoro_miden/tests/: executing_on_pool.rs  note_unit_test.rs
crates/zoro_miden_client/: Cargo.toml
crates/zoro_miden_client/src/: lib.rs
crates/zoro_primitives/: Cargo.toml
crates/zoro_primitives/src/: dummy_curve.rs  traits.rs
crates/zoroswap/: Cargo.toml
crates/zoroswap/masm/accounts/: hook_wallet.masm  two_asset_pool.masm  zoropool.masm
crates/zoroswap/masm/notes/: DEPOSIT.masm  WITHDRAW.masm  ZOROSWAP.masm
crates/zoroswap/masm/scripts/: set_pool0_state.masm  set_pool1_state.masm
crates/zoroswap/src/: amm_state.rs  common.rs  config.rs  faucet.rs  lib.rs  main.rs  note_serialization.rs  notes_listener.rs  oracle_sse.rs  order.rs  pool.rs  server.rs  sqlite.rs  testing.rs  trading_engine.rs
crates/zoroswap/src/websocket/: broadcaster.rs  connection_manager.rs  handlers.rs  messages.rs  mod.rs
crates/zoroswap/tests/: e2e_create_funded_accounts_test.rs  e2e_p2id_miden_scale_test.rs  e2e_p2id_swap_scale_test.rs  e2e_position_swap_scale_test.rs  e2e_position_swap_test.rs  e2e_private_deposit_withdraw.rs  e2e_private_note_test.rs  e2e_public_note_test.rs  e2e_zoroswap_note_test.rs  stale_price_test.rs  test_utils.rs
masm/accounts/wallets/: advanced.masm  basic.masm  zoro.masm
