[workspace]
resolver = "2"
members = ["crates/zoro_curve_base", "crates/zoro_miden", "crates/zoroswap"]

[workspace.dependencies]
alloy = { version = "1.0.23", features = ["full"] }
miden-assembly = "0.22"
miden-client = { version = "0.14.0", features = ["testing", "tonic"] }
miden-client-sqlite-store = { version = "0.14.0" }
miden-core = "0.22.1"
miden-protocol = { version = "0.14.4", default-features = false, features = [
  "testing",
] }
miden-standards = "0.14.4"
miden-tx = "0.14.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
incremental = true
codegen-units = 16

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
