[package]
name = "zoroswap"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
zoro_primitives = { path = "../zoro_primitives", default-features = false }
zoro_miden_client = { path = "../zoro_miden_client" }
miden-client = { version = "0.12.5", features = ["testing", "tonic"] }
miden-client-sqlite-store = { version = "0.12.5" }
miden-lib = { version = "0.12.4", default-features = false }
miden-objects = { version = "0.12.4", default-features = false, features = [
  "testing",
] }
miden-assembly = "0.19"
miden-tx = "0.12.4"
rand = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.46", features = [
  "rt-multi-thread",
  "net",
  "macros",
  "fs",
] }

# Web server dependencies
axum = { version = "0.8.4", features = ["macros", "tokio"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client for price fetching
reqwest = { version = "0.12", features = ["json"] }

# Additional utilities
anyhow = "1.0"
base64 = "0.22"
dotenv = "0.15"
dashmap = "6.1.0"
alloy = { workspace = true }
url = "2.5.4"
toml = "0.9.4"
reqwest-eventsource = "0.6.0"
futures-util = "0.3.31"
clap = { version = "4.5", features = ["derive"] }

# Proprietary curve usage
#
# The feature `repo-curve` makes `zoro` use the curve
# from a private repostiory.
zoro_curve_private_repo = { package = "zoro_curve", git = "ssh://git@github.com/zoroswap/zoro-curve.git", optional = true }

# The feature `local-curve` makes `zoro` use the `zoro_curve`
# folder relative to this directory.
zoro_curve_local = { package = "zoro_curve", path = "../../../zoro-curve", optional = true }

[features]
default = ["zoro_primitives/dummy-curve"]
zoro-curve-local = ["dep:zoro_curve_local"]
zoro-curve-private-repo = ["dep:zoro_curve_private_repo"]

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "spawn_faucets"
path = "src/bin/spawn_faucets.rs"

[[bin]]
name = "spawn_pools"
path = "src/bin/spawn_pools.rs"