[package]
name = "zoro_miden_client"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
miden-client = { version = "0.12", features = ["testing", "tonic"] }
miden-client-sqlite-store = { version = "0.12" }
miden-lib = { version = "0.12", default-features = false }
miden-objects = { version = "0.12", default-features = false, features = ["testing"] }
miden-assembly = "0.19"
rand = { version = "0.9" }
tokio = { version = "1.46", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1"
anyhow = "1.0"
