[package]
name = "zoro_miden_client"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
miden-client = { version = "0.13", features = ["testing", "tonic"] }
miden-client-sqlite-store = { version = "0.13" }
miden-standards = { version = "0.13", default-features = false }
miden-protocol = { version = "0.13", default-features = false, features = ["testing"] }
miden-assembly = "0.20"
rand = { version = "0.9" }
tokio = { version = "1.46", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1"
anyhow = "1.0"
