[package]
name = "zoro_miden_client"
version = "0.4.1"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0"
miden-assembly = "0.20"
miden-client = { version = "0.13.2", features = ["testing", "tonic"] }
miden-client-sqlite-store = { version = "0.13.2" }
miden-protocol = { version = "0.13", default-features = false, features = [
  "testing"
] }
miden-standards = { version = "0.13", default-features = false }
rand = { version = "0.9" }
tokio = { version = "1.46", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1"
