[package]
name = "zoroswap"
version = "0.5.0"
edition = "2024"
license = "GPL-3.0-only"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "spawn_faucets"
path = "src/bin/spawn_faucets.rs"

[[bin]]
name = "spawn_pools"
path = "src/bin/spawn_pools.rs"

[dependencies]
alloy = { workspace = true }
anyhow = "1.0"
axum = { version = "0.8.4", features = ["macros", "tokio", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1.0"
dotenv = "0.15"
futures-util = "0.3.31"
miden-assembly = { workspace = true }
miden-client = { workspace = true }
miden-protocol = { workspace = true }
miden-standards = { workspace = true }
miden-tx = { workspace = true }
rand = { version = "0.9" }
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6.0"
rusqlite = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.46", features = [
  "fs",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
] }
tokio-stream = "0.1"
toml = "0.9.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
url = "2.5.4"
uuid = { version = "1.0", features = ["serde", "v4"] }
zoro_curve_base = { path = "../zoro_curve_base", default-features = false }
# Proprietary curve usage
#
# The feature `local-curve` makes `zoro` use the `zoro-curve`
# folder relative to this directory.
zoro_curve_local = { package = "zoro_curve", path = "../../../zoro-curve", optional = true }
zoro_miden = { path = "../zoro_miden" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["zoro_curve_base/dummy-curve"]
zoro-curve-local = ["dep:zoro_curve_local"]
